snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.pom.sha512
b9b3fb25466b6d81bf0ea93917568bc8ba3dc05f68129fa32534a3b2f4604957f8ff4d94489c8473bc251a28b4cc8e4d6ce7a255aa7eeb2fca6c8134305f9949